# comparing_rstpy

./: .gitignore  README.md
model/: README.md
py_llm/: download.py  main.py  pyproject.toml
rst_llm/: Cargo.toml
rst_llm/src/: infer.rs  infer_old.rs
