[package]
name = "rst_llm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.54"
llama-rs = "0.0.0"
# In this case, We use crates.io. But we can build source from git like below
# candle-core = { git = "https://github.com/huggingface/candle", tag = "v0.8.1" }
candle-core = { version = "0.8.4" }
candle-nn = { version = "0.8.4" }
candle-transformers = { version = "0.8.4" }
tokenizers = "0.21.1"
serde_json = "1.0"
anyhow = "1.0"

[[bin]]
name = "infer"
path = "src/infer.rs"
